Bug 490670 - random playlist order, also different repeat modes
Summary: random playlist order, also different repeat modes
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.1.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
: 504823 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-07-22 21:03 UTC by Edmund Laugasson
Modified: 2025-08-15 19:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
current playlist header - expected repeat, random play button should be visible right away but currently not available at all (4.20 KB, image/png)
2024-07-22 21:03 UTC, Edmund Laugasson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edmund Laugasson 2024-07-22 21:03:26 UTC
Created attachment 171908 [details]
current playlist header - expected repeat, random play button should be visible right away but currently not available at all

SUMMARY


STEPS TO REPRODUCE
1. open certain playlist of folder to play
2. try to find a way to play items in playlist in random order
3. such option not found

OBSERVED RESULT
Cannot play playlist items in random order. Currently repeat is available in Settings->Playlist but cannot define, how repeat works. Seems like it will currently repeat whole playlist only. Checked in pull-down menu Playback and even there are random play, different repeat modes missing.

EXPECTED RESULT
Can play playlist items in random order. Also turn repeat either on, off, repeat current file, repeat all playlist. Would expect to see two additional buttons on top of playlist: random order play, repeat. Also appropriate choices under Playback menu. Also appropriate choices under Settings->Playlist - below in additional information section is described.

SOFTWARE/OS VERSIONS
Linux:  EndeavourOS (all updates done) - it is closely based on Arch Linux
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION

Checked from Settings->Playlist - random playing could be also there. Would expect random play button in top of playlist also. Currently under Settings->Playlist is repeat feature but would propose also: random order. There under repeat function could be also suboption: repeat either current file or whole playlist.

Usually in audio apps there is a button somewhere in playlist edge (two arrows with shape of circle), where by clicking on it will toggle: repeat off (button greyed out), repeat on (button greyed on), repeat current file (number 1 appears inside circle), repeat all playlist (no number inside arrow circle).

Repeat button is a separate button and clicking on it will either turn random play on or off and is displayed as crossed arrows like X.
Comment 1 Edmund Laugasson 2024-07-22 21:17:23 UTC
I meaned random play button is a separate button from repeat button. Unfortunately typos cannot be fixed, I have to write a new comment.
Also under "Steps to reproduce" should be added:
- both missing buttons: random play and repeat with different repeat modes
- under Playback both missing choices: random play and repeat with different repeat modes
- under Settings->Playlist missing repeat modes and missing random play choice
I considered to write two separate reports but as these are so small ones, decided to join them into one. I understand, that playing randomly and different repeat modes are different things but very close. Also programming seems to similar - just button design and binded functionality differs. Same applies to menu, settings choices.
Comment 2 Edmund Laugasson 2024-07-22 21:30:44 UTC
Sounds like different repeat modes is appropriate for the button on top of playlist and choices to playback menu but not to Settings->Playlist. Usually repeating one item is temporary decision and should be possible to made directly from playlist via repeat button. Under Settings->Playlist are more permanent settings and such temporary settings are not relevant there.
But random playing order is so-so - could be either permanent or also temporary setting, therefore could be in all three places: button in playlist, Playback menu and Settings->Playlist.
Comment 3 george fb 2025-08-15 19:40:45 UTC
*** Bug 504823 has been marked as a duplicate of this bug. ***
Comment 4 george fb 2025-08-15 19:58:29 UTC
Git commit b17eb5bceaa4a8b1147974c53653bb58d3e1639f by George Florea Bănuș.
Committed on 15/08/2025 at 19:58.
Pushed by georgefb into branch 'master'.

PlaylistSettings, playlistmodel: implement random/shuffled play order

M  +113  -33   src/models/playlistmodel.cpp
M  +33   -1    src/models/playlistmodel.h
M  +1    -1    src/mpv/mpvitem.cpp
M  +6    -0    src/qml/Settings/PlaylistSettings.qml

https://invent.kde.org/multimedia/haruna/-/commit/b17eb5bceaa4a8b1147974c53653bb58d3e1639f