PlaylistSettings, playlistmodel: implement random/shuffled play order

BUG: 490670